@@ -1,1 +1,2 @@
+Michael Kutý <6du1ro.n@gmail.com>
 Simon Bächler <sb@feinheit.ch>
