@@ -1,5 +1,5 @@
 from django.core import serializers
-from django.http import HttpResponse
+from django.http import JsonResponse
 
 from feincms.views.decorators import standalone
 
@@ -8,7 +8,7 @@ from .models import Event
 
 @standalone
 def events(request):
-    filter = request.REQUEST.get('filter', 'upcoming')
+    filter = request.GET.get('filter', 'upcoming')
 
     if filter == 'past':
         events = Event.objects.past()
@@ -19,6 +19,6 @@ def events(request):
     else:
         events = Event.objects.upcoming()
 
-    return HttpResponse(
+    return JsonResponse(
         serializers.serialize('json', events, ensure_ascii=False),
-        mimetype="text/javascript")
+        safe=False)
