@@ -1,7 +1,8 @@
+from django.utils.translation import ugettext_lazy as _
 
 from django.apps import AppConfig
 
 
 class AgendaConfig(AppConfig):
     name = 'elephantagenda'
-    verbose_name = "Agenda"
+    verbose_name = _("agenda")
