@@ -1,4 +1,4 @@
-{% load feinheit_thumbnail i18n %}
+{% load thumbnail i18n %}
 <table class="event-list">
     <thead>
         <tr>
@@ -11,7 +11,7 @@
     <tbody>
     {% for object in object_list %}
         <tr>
-            <td><a href="{{ object.translation.slug }}/">{{ object.translation.title }}</a></td>
+            <td><a href="{{ object.get_absolute_url }}">{{ object.translation.name|default:object.name }}</a></td>
             <td>{{ object.address }}{% if object.address and object.country %}, {% endif %}{{ object.get_country_display }}</td>
             <td>{{ object.start_date|date:"j. F Y" }} {{ object.start_time|time:"H:i" }}</td>
             <td>{{ object.end_date|date:"j. F Y" }} {{ object.end_time|time:"H:i" }}</td>
