@@ -1,21 +1,15 @@
+from api import events
 from django.conf.urls import *
 
-from api import events
-from .models import Event
+from .views import EventArchiveview, EventDetailView, EventListView
 
 urlpatterns = patterns('',
-                       url(r'^$', 'django.views.generic.list_detail.object_list', {
-                           'queryset': Event.objects.upcoming(),
-                           'paginate_by': 20,
-                       }, name='agenda_event_list'),
-                       url(r'^(?P<slug>[\w-]+)/$', 'django.views.generic.list_detail.object_detail', {
-                           'queryset': Event.objects.all(),
-                           'slug_field': 'translations__slug',
-                       }, name='agenda_event_detail'),
-                       url(r'^archive/$', 'django.views.generic.list_detail.object_list', {
-                           'queryset': Event.objects.past(),
-                           'paginate_by': 20,
-                       }, name='agenda_event_list'),
+                       url(r'^$', EventListView.as_view(),
+                           name='event_list'),
+                       url(r'^(?P<slug>[\w-]+)/$', EventDetailView.as_view(),
+                           name='event_detail'),
+                       url(r'^archive/$', EventArchiveview.as_view(),
+                           name='event_list'),
 
-                       url('^api/events/', events, name='agenda_api_events'),
+                       url('^api/events/', events, name='api_events'),
                        )
