@@ -6,6 +6,28 @@ from models import Event
 from feincms.translations import short_language_code
 
 
+from django.views.generic import DetailView, ListView
+from django.utils import timezone
+
+
+class EventListView(ListView):
+
+    template_name = 'agenda/event_list.html'
+    queryset = Event.objects.upcoming()
+    paginate_by = 20
+
+
+class EventArchiveview(EventListView):
+
+    queryset = Event.objects.past()
+
+
+class EventDetailView(DetailView):
+
+    model = Event
+    template_name = 'agenda/event_detail.html'
+
+
 def event_list(request, filter=None):
     if filter == 'upcoming':
         events = Event.objects.upcoming().filter(language=short_language_code)
