@@ -4,7 +4,7 @@ summary = A versatile agenda module for FeinCMS.
 description-file =
     README.rst
 author = Simon Bächler
-author-email = mail@michaelkuty.eu
+author-email = dev@feinheit.ch
 version = 1.0.0
 home-page = https://github.com/feinheit/feincms-elephantagenda.git
 classifier =
@@ -14,11 +14,7 @@ classifier =
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Programming Language :: Python
-    Programming Language :: Python :: 2.6
     Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.3
-    Programming Language :: Python :: 3.4
     Topic :: Software Development
     Topic :: Software Development :: Libraries :: Application Frameworks
 
